...
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" id="Mos-lY-yNT"/>
                    <connections>
                        <outlet property="contactsTableView" destination="w2N-SP-zfm" id="ue6-bc-y6y"/>
...
                                                                    <constraint firstAttribute="width" constant="270" id="IwM-mo-M8Z"/>
                                                                </constraints>
                                                                <state key="normal" image="callImage"/>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nf3-vf-JrF">
...
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Dialer" id="iwX-A3-7id"/>
                    <connections>
                        <outlet property="callButton" destination="V9l-hX-HgU" id="aUl-G4-NNv"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fl1-Pe-g4v" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Call History" image="40x40 history" id="LRN-QM-ild"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uei-ND-u1C">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zxv-k8-eGb" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Emergency" image="Bell" id="Is5-K2-WTe"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P68-aR-bdl">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                        <state key="normal" title="Add Contact #1">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                        <state key="normal" title="Add contact #2">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        <color key="backgroundColor" red="0.54032589190000002" green="0.66181309239999997" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                        <state key="normal" title="911">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
