...
        
        if UIApplication.shared.canOpenURL(url){
            UIApplication.shared.open(url)
            saveIntoCallHistory() // used to save to database
        }
        else{
            let alert = UIAlertController(title: "Invalid Phone Number", message: "Cannot make call to number \(phone_number)", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Default action"), style: .default, handler: { _ in
                NSLog("The \"OK\" alert occured.")
            }))
            self.present(alert, animated: true, completion: nil)
        }
        // DELETE THIS LATER
        saveIntoCallHistory() // used for testing in simulator
...
